refactor: 重构RAG架构第一阶段