@@ -3,16 +3,20 @@ package org.yilena.luna.rag.retrievers;
 import lombok.RequiredArgsConstructor;
 import org.springframework.stereotype.Component;
 import org.yilena.luna.entity.KnowledgeChunkRecord;
+import org.yilena.luna.enums.SourceType;
 import org.yilena.luna.rag.adapters.PgRetrievalAdapter;
 import org.yilena.luna.rag.models.Evidence;
 import org.yilena.luna.rag.models.QueryObject;
 import org.yilena.luna.rag.models.RetrievalSource;
 
-import java.util.Collections;
+import java.time.Duration;
+import java.time.LocalDateTime;
+import java.util.ArrayList;
+import java.util.Comparator;
 import java.util.HashMap;
 import java.util.List;
 import java.util.Map;
-import java.util.stream.IntStream;
+import java.util.Objects;
 
 /** 知识库检索器，负责知识库向量召回并转换为标准 Evidence。 */
 @Component
@@ -28,41 +32,162 @@ public class KnowledgeRetriever implements BaseRetriever {
 
     @Override
     public List<Evidence> retrieve(QueryObject queryObject, int topK, Map<String, Object> filters) {
-        String vector = queryObject.getEmbedding();
-        if (vector == null || vector.isBlank() || "[]".equals(vector.trim())) {
-            return Collections.emptyList();
+        String query = effectiveQuery(queryObject);
+        String vector = toVector(queryObject.getEmbedding());
+        boolean exactFirst = isExactFirst(queryObject, filters);
+        List<KnowledgeChunkRecord> candidates = new ArrayList<>();
+
+        if (exactFirst) {
+            candidates.addAll(safeCall(() -> pgRetrievalAdapter.searchKnowledgeByExact(query, topK)));
+            candidates.addAll(safeCall(() -> pgRetrievalAdapter.searchKnowledgeByFts(query, topK)));
+            candidates.addAll(safeCall(() -> pgRetrievalAdapter.searchKnowledgeByKeyword(query, topK)));
+            if (candidates.size() < topK && vector != null) {
+                candidates.addAll(safeCall(() -> pgRetrievalAdapter.searchKnowledgeByVector(vector, Math.max(topK, topK * 2))));
+            }
+        } else {
+            if (vector != null) {
+                candidates.addAll(safeCall(() -> pgRetrievalAdapter.searchKnowledgeByVector(vector, Math.max(topK, topK * 2))));
+            }
+            candidates.addAll(safeCall(() -> pgRetrievalAdapter.searchKnowledgeByFts(query, topK)));
         }
-        List<KnowledgeChunkRecord> records = pgRetrievalAdapter.searchKnowledgeByVector(vector, topK);
-        if (records == null || records.isEmpty()) {
-            return Collections.emptyList();
+
+        if (candidates.isEmpty()) {
+            return List.of();
         }
-        return IntStream.range(0, records.size())
-                .mapToObj(index -> toEvidence(records.get(index), index, records.size()))
+
+        Map<String, ScoredKnowledge> merged = new HashMap<>();
+        for (KnowledgeChunkRecord item : candidates) {
+            if (item == null) {
+                continue;
+            }
+            String id = String.valueOf(item.getChunkId() != null ? item.getChunkId() : item.getId());
+            ScoredKnowledge current = merged.get(id);
+            if (current == null) {
+                merged.put(id, new ScoredKnowledge(item));
+            } else {
+                current.merge(item);
+            }
+        }
+
+        return merged.values().stream()
+                .map(ScoredKnowledge::toEvidence)
+                .sorted(Comparator.comparingDouble(Evidence::getScore).reversed())
+                .limit(Math.max(1, topK))
                 .toList();
     }
 
-    private Evidence toEvidence(KnowledgeChunkRecord kb, int index, int total) {
+    private Evidence toEvidence(KnowledgeChunkRecord kb, double finalScore, double vectorScore, double ftsScore, double recencyScore, double sourcePrior) {
         Map<String, Object> metadata = new HashMap<>();
         metadata.put("raw_id", kb.getChunkId() != null ? kb.getChunkId() : kb.getId());
         metadata.put("doc_id", kb.getDocId());
         metadata.put("chunk_id", kb.getChunkId());
         metadata.put("source_type", kb.getSourceType() != null ? kb.getSourceType().getValue() : null);
         metadata.put("source_path", kb.getSourcePath());
+        metadata.put("vector_score", vectorScore);
+        metadata.put("fts_score", ftsScore);
+        metadata.put("recency_score", recencyScore);
+        metadata.put("source_prior", sourcePrior);
         return Evidence.builder()
                 .id("knowledge_chunk:" + (kb.getChunkId() != null ? kb.getChunkId() : kb.getId()))
                 .source(RetrievalSource.KNOWLEDGE)
                 .type("knowledge")
                 .title(kb.getTitle())
                 .content(kb.getContent())
-                .score(rankScore(index, total))
+                .score(finalScore)
                 .metadata(metadata)
                 .build();
     }
 
-    private double rankScore(int index, int total) {
-        if (total <= 1) {
-            return 1.0D;
+    private String effectiveQuery(QueryObject queryObject) {
+        if (queryObject.getRewrittenQuery() != null && !queryObject.getRewrittenQuery().isBlank()) {
+            return queryObject.getRewrittenQuery();
         }
-        return 1.0D - ((double) index / (double) total);
+        if (queryObject.getNormalizedQuery() != null && !queryObject.getNormalizedQuery().isBlank()) {
+            return queryObject.getNormalizedQuery();
+        }
+        return Objects.toString(queryObject.getOriginalQuery(), "");
+    }
+
+    private boolean isExactFirst(QueryObject queryObject, Map<String, Object> filters) {
+        if (queryObject.getQueryTags() != null && queryObject.getQueryTags().contains("exact_match_first")) {
+            return true;
+        }
+        Object mode = filters == null ? null : filters.get("search_mode");
+        return "exact_first".equalsIgnoreCase(String.valueOf(mode));
+    }
+
+    private String toVector(List<Double> embedding) {
+        if (embedding == null || embedding.isEmpty()) {
+            return null;
+        }
+        return "[" + embedding.stream().map(String::valueOf).reduce((a, b) -> a + "," + b).orElse("") + "]";
+    }
+
+    private double recencyScore(LocalDateTime updatedAt) {
+        if (updatedAt == null) {
+            return 0.2D;
+        }
+        long days = Math.max(0L, Duration.between(updatedAt, LocalDateTime.now()).toDays());
+        return 1.0D / (1.0D + (days / 30.0D));
+    }
+
+    private double sourcePrior(SourceType sourceType) {
+        if (sourceType == null) {
+            return 0.6D;
+        }
+        return switch (sourceType) {
+            case MANUAL_INPUT -> 1.0D;
+            case FILE -> 0.8D;
+            case WEB_SEARCH -> 0.6D;
+        };
+    }
+
+    private List<KnowledgeChunkRecord> safeCall(SupplierWithException<List<KnowledgeChunkRecord>> supplier) {
+        try {
+            List<KnowledgeChunkRecord> items = supplier.get();
+            return items == null ? List.of() : items;
+        } catch (Exception ignore) {
+            return List.of();
+        }
+    }
+
+    @FunctionalInterface
+    private interface SupplierWithException<T> {
+        T get() throws Exception;
+    }
+
+    private class ScoredKnowledge {
+        private final KnowledgeChunkRecord record;
+        private double vectorScore;
+        private double ftsScore;
+        private double recencyScore;
+        private double sourcePrior;
+
+        private ScoredKnowledge(KnowledgeChunkRecord record) {
+            this.record = record;
+            this.vectorScore = normalize(record.getVectorScore());
+            this.ftsScore = normalize(record.getFtsScore());
+            this.recencyScore = recencyScore(record.getUpdatedAt());
+            this.sourcePrior = sourcePrior(record.getSourceType());
+        }
+
+        private void merge(KnowledgeChunkRecord other) {
+            this.vectorScore = Math.max(this.vectorScore, normalize(other.getVectorScore()));
+            this.ftsScore = Math.max(this.ftsScore, normalize(other.getFtsScore()));
+            this.recencyScore = Math.max(this.recencyScore, recencyScore(other.getUpdatedAt()));
+            this.sourcePrior = Math.max(this.sourcePrior, sourcePrior(other.getSourceType()));
+        }
+
+        private Evidence toEvidence() {
+            double finalScore = 0.60D * vectorScore + 0.25D * ftsScore + 0.10D * recencyScore + 0.05D * sourcePrior;
+            return KnowledgeRetriever.this.toEvidence(record, finalScore, vectorScore, ftsScore, recencyScore, sourcePrior);
+        }
+
+        private double normalize(Double score) {
+            if (score == null || score.isNaN() || score.isInfinite()) {
+                return 0.0D;
+            }
+            return Math.max(0.0D, Math.min(1.0D, score));
+        }
     }
 }
