@@ -7,11 +7,14 @@ import org.yilena.luna.rag.models.Evidence;
 import org.yilena.luna.rag.models.QueryObject;
 import org.yilena.luna.rag.models.RetrievalSource;
 
-import java.util.Collections;
+import java.time.Duration;
+import java.time.LocalDateTime;
+import java.util.ArrayList;
+import java.util.Comparator;
 import java.util.HashMap;
 import java.util.List;
 import java.util.Map;
-import java.util.stream.IntStream;
+import java.util.Objects;
 
 @Component
 @RequiredArgsConstructor
@@ -26,39 +29,105 @@ public class PreferenceRetriever implements BaseRetriever {
 
     @Override
     public List<Evidence> retrieve(QueryObject queryObject, int topK, Map<String, Object> filters) {
-        String sessionId = queryObject.getSessionId();
-        if (sessionId == null || sessionId.isBlank()) {
-            return Collections.emptyList();
+        String prefKey = resolvePrefKey(queryObject, filters);
+        String query = effectiveQuery(queryObject);
+        String vector = toVector(queryObject.getEmbedding());
+        int keepTopK = Math.max(1, Math.min(3, topK));
+
+        List<Map<String, Object>> candidates = new ArrayList<>();
+        candidates.addAll(safeCall(() -> ragMemoryMapper.selectPreferenceByExactOrTrigram(prefKey, query, keepTopK)));
+        if (candidates.size() < keepTopK && vector != null) {
+            candidates.addAll(safeCall(() -> ragMemoryMapper.selectPreferenceByVector(vector, Math.max(keepTopK, keepTopK * 2))));
         }
-        List<Map<String, Object>> rows = queryPreferenceRows(sessionId, queryObject.getEmbedding(), topK <= 0 ? 10 : topK);
-        if (rows.isEmpty()) {
-            return Collections.emptyList();
+        if (candidates.isEmpty()) {
+            return List.of();
         }
-        return IntStream.range(0, rows.size())
-                .mapToObj(index -> toEvidence(rows.get(index), index, rows.size()))
+
+        Map<String, ScoredPreference> merged = new HashMap<>();
+        for (Map<String, Object> row : candidates) {
+            String id = str(row.get("id"));
+            if (id.isBlank()) {
+                continue;
+            }
+            ScoredPreference current = merged.get(id);
+            if (current == null) {
+                merged.put(id, new ScoredPreference(row, prefKey));
+            } else {
+                current.merge(row, prefKey);
+            }
+        }
+
+        return merged.values().stream()
+                .map(ScoredPreference::toEvidence)
+                .sorted(Comparator.comparingDouble(Evidence::getScore).reversed())
+                .limit(keepTopK)
                 .toList();
     }
 
-    private List<Map<String, Object>> queryPreferenceRows(String sessionId, String queryVector, int topK) {
+    private <T> List<T> safeCall(SupplierWithException<List<T>> supplier) {
         try {
-            return ragMemoryMapper.selectPreferenceMemory(sessionId, queryVector, topK);
+            List<T> rows = supplier.get();
+            return rows == null ? List.of() : rows;
         } catch (Exception ignore) {
-            return Collections.emptyList();
+            return List.of();
         }
     }
 
-    private Evidence toEvidence(Map<String, Object> row, int index, int total) {
+    private String effectiveQuery(QueryObject queryObject) {
+        if (queryObject.getRewrittenQuery() != null && !queryObject.getRewrittenQuery().isBlank()) {
+            return queryObject.getRewrittenQuery();
+        }
+        if (queryObject.getNormalizedQuery() != null && !queryObject.getNormalizedQuery().isBlank()) {
+            return queryObject.getNormalizedQuery();
+        }
+        return Objects.toString(queryObject.getOriginalQuery(), "");
+    }
+
+    private String resolvePrefKey(QueryObject queryObject, Map<String, Object> filters) {
+        if (filters != null && filters.get("pref_key") != null) {
+            String fromFilter = String.valueOf(filters.get("pref_key")).trim();
+            if (!fromFilter.isEmpty()) {
+                return fromFilter;
+            }
+        }
+        if (queryObject.getQueryTags() != null && queryObject.getQueryTags().contains("key_match_priority")) {
+            String text = effectiveQuery(queryObject).toLowerCase();
+            if (text.contains("长度")) {
+                return "response_length";
+            }
+            if (text.contains("风格")) {
+                return "response_style";
+            }
+            if (text.contains("语气")) {
+                return "tone";
+            }
+        }
+        return null;
+    }
+
+    private String toVector(List<Double> embedding) {
+        if (embedding == null || embedding.isEmpty()) {
+            return null;
+        }
+        return "[" + embedding.stream().map(String::valueOf).reduce((a, b) -> a + "," + b).orElse("") + "]";
+    }
+
+    private Evidence toEvidence(Map<String, Object> row, double finalScore, double vectorScore, double keyMatchScore, double recencyScore, double textMatchScore) {
         Map<String, Object> metadata = new HashMap<>();
         metadata.put("raw_id", row.get("id"));
         metadata.put("pref_key", str(row.get("pref_key")));
         metadata.put("pref_value", str(row.get("pref_value")));
+        metadata.put("vector_score", vectorScore);
+        metadata.put("key_match_score", keyMatchScore);
+        metadata.put("recency_score", recencyScore);
+        metadata.put("text_match_score", textMatchScore);
         return Evidence.builder()
                 .id("preference:" + str(row.get("id")))
                 .source(RetrievalSource.PREFERENCE)
                 .type("preference")
                 .title(str(row.get("pref_key")))
                 .content(buildContent(row))
-                .score(rankScore(index, total))
+                .score(finalScore)
                 .metadata(metadata)
                 .build();
     }
@@ -73,10 +142,73 @@ public class PreferenceRetriever implements BaseRetriever {
         return value == null ? "" : String.valueOf(value);
     }
 
-    private double rankScore(int index, int total) {
-        if (total <= 1) {
-            return 1.0D;
+    private double recencyScore(Object timeObj) {
+        LocalDateTime time = null;
+        if (timeObj instanceof LocalDateTime dateTime) {
+            time = dateTime;
+        } else if (timeObj != null) {
+            try {
+                time = LocalDateTime.parse(String.valueOf(timeObj).replace(" ", "T"));
+            } catch (Exception ignore) {
+                time = null;
+            }
         }
-        return 1.0D - ((double) index / (double) total);
+        if (time == null) {
+            return 0.3D;
+        }
+        long days = Math.max(0L, Duration.between(time, LocalDateTime.now()).toDays());
+        return 1.0D / (1.0D + (days / 45.0D));
+    }
+
+    @FunctionalInterface
+    private interface SupplierWithException<T> {
+        T get() throws Exception;
+    }
+
+    private class ScoredPreference {
+        private final Map<String, Object> row;
+        private double vectorScore;
+        private double keyMatchScore;
+        private double recencyScore;
+        private double textMatchScore;
+
+        private ScoredPreference(Map<String, Object> row, String prefKey) {
+            this.row = new HashMap<>(row);
+            this.vectorScore = normalize(row.get("vector_score"));
+            this.keyMatchScore = keyMatchScore(row, prefKey);
+            this.recencyScore = recencyScore(row.get("updated_at"));
+            this.textMatchScore = Math.max(normalize(row.get("text_match_score")), normalize(row.get("key_match_score")));
+        }
+
+        private void merge(Map<String, Object> other, String prefKey) {
+            this.vectorScore = Math.max(this.vectorScore, normalize(other.get("vector_score")));
+            this.keyMatchScore = Math.max(this.keyMatchScore, keyMatchScore(other, prefKey));
+            this.recencyScore = Math.max(this.recencyScore, recencyScore(other.get("updated_at")));
+            this.textMatchScore = Math.max(this.textMatchScore, Math.max(normalize(other.get("text_match_score")), normalize(other.get("key_match_score"))));
+        }
+
+        private double keyMatchScore(Map<String, Object> row, String prefKey) {
+            String key = str(row.get("pref_key"));
+            if (prefKey != null && prefKey.equalsIgnoreCase(key)) {
+                return 1.0D;
+            }
+            return normalize(row.get("key_match_score"));
+        }
+
+        private Evidence toEvidence() {
+            double finalScore = 0.50D * vectorScore + 0.20D * keyMatchScore + 0.20D * recencyScore + 0.10D * textMatchScore;
+            return PreferenceRetriever.this.toEvidence(row, finalScore, vectorScore, keyMatchScore, recencyScore, textMatchScore);
+        }
+
+        private double normalize(Object rawScore) {
+            if (rawScore instanceof Number number) {
+                return Math.max(0.0D, Math.min(1.0D, number.doubleValue()));
+            }
+            try {
+                return Math.max(0.0D, Math.min(1.0D, Double.parseDouble(str(rawScore))));
+            } catch (Exception ignore) {
+                return 0.0D;
+            }
+        }
     }
 }
